--- a/ci/test.yml
+++ b/ci/test.yml
@@ -1,11 +1,11 @@
 ---
 platform: linux
 inputs:
-- name: rabbitmq-erlang-client
+- name: amqp_client
 - name: rabbit_common
 image_resource:
   type: docker-image
   source:
     repository: pivotalrabbitmq/ci
 run:
-  path: rabbitmq-erlang-client/ci/test.sh
+  path: amqp_client/ci/test.sh
