--- a/ci/merge.yml
+++ b/ci/merge.yml
@@ -3,9 +3,10 @@ platform: linux
 inputs:
 - name: amqp_client
 - name: rabbit_common
+- name: rabbit
 image_resource:
   type: docker-image
   source:
     repository: pivotalrabbitmq/ci
 run:
-  path: amqp_client/ci/test.sh
+  path: amqp_client/ci/merge.sh
