ci/test.yml: rabbitmq-server is required by the testsuite

--- a/ci/test.yml
+++ b/ci/test.yml
@@ -3,6 +3,7 @@ platform: linux
 inputs:
 - name: amqp_client
 - name: rabbit_common
+- name: rabbit
 image_resource:
   type: docker-image
   source:
