ci/test.yml: rabbitmq-server is required by the testsuite

--- a/ci/test.yml
+++ b/ci/test.yml
@@ -4,6 +4,7 @@ inputs:
 - name: rabbitmq_codegen
 - name: amqp_client
 - name: rabbit_common
+- name: rabbit
 image_resource:
   type: docker-image
   source:
