Fixing typo in CI script

--- a/ci/test.yml
+++ b/ci/test.yml
@@ -1,7 +1,7 @@
 ---
 platform: linux
 inputs:
-- name: rabbit_codegen
+- name: rabbitmq_codegen
 - name: amqp_client
 - name: rabbit_common
 - name: rabbit
